<resources>
    <string name="app_name">JCI</string>
    <string name="log_in">Log In</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="welcome_btn1">Market Arrival Data</string>
    <string name="welcome_btn2">Test 2</string>
    <string name="welcome_btn3">Test 3</string>
    <string name="welcome_btn4">Test 4</string>
    <string name="jute_variety">Jute Variety</string>
    <string name="arrived_quantity">Arrived Quantity</string>
    <string name="minimum_ruling_market_rate">Minimum Ruling Market Rate</string>
    <string name="maximum_ruling_market_rate">Maximum Ruling Market Rate</string>
    <string name="minimum_moisture_content">Minimum Moisture Content</string>
    <string name="maximum_moisture_content">Maximum Moisture Content</string>
    <string name="grade_composition">Grade Composition</string>
</resources>
