<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_market_arrival"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.surflex.jci.MarketArrivalActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView3"
        app:srcCompat="@drawable/jute"
        android:scaleType="fitXY">

    </ImageView>



    <TextView
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView"
        android:text="@string/jute_variety" />

    <TextView
        android:textSize="18dp"
        android:text="@string/arrived_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView2" />

    <TextView
        android:textSize="18dp"
        android:text="@string/minimum_ruling_market_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="220dp"

        android:id="@+id/spinner1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignStart="@+id/spinner1"
        android:id="@+id/arrivalQuantity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editText16"
        android:layout_alignLeft="@+id/editText16"
        android:layout_alignStart="@+id/editText16"
        android:layout_marginTop="30dp"
        android:id="@+id/editText17" />

    <TextView
        android:textSize="18dp"
        android:text="@string/minimum_moisture_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView6" />

    <TextView
        android:textSize="18dp"
        android:text="@string/maximum_moisture_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView7" />

    <TextView
        android:textSize="18dp"
        android:text="@string/grade_composition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView8" />

    <TextView
        android:textSize="18dp"
        android:text="@string/minimum_ruling_market_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/editText18"
        android:layout_alignBottom="@+id/editText18"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText19"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText18"
        android:layout_below="@+id/editText17"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editText17"
        android:layout_alignStart="@+id/editText17" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editText18"
        android:layout_alignLeft="@+id/editText18"
        android:layout_alignStart="@+id/editText18"
        android:id="@+id/editText20" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editText19"
        android:layout_alignLeft="@+id/editText20"
        android:layout_alignStart="@+id/editText20"
        android:id="@+id/editText21" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editText21"
        android:layout_alignLeft="@+id/editText21"
        android:layout_alignStart="@+id/editText21"
        android:id="@+id/editText22" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/button6"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:onClick="saveData" />
</RelativeLayout>
